# storage/api-docs/api-docs.json
@@ -5,7 +5,7 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/v1/todo'/lists": {
+        "/api/v1/todo/lists": {
             "get": {
                 "tags": [
                     "To do List"
@@ -14,36 +14,8 @@
                 "description": "Search for cars for hire and for sale.",
                 "operationId": "v1TodoLists",
                 "responses": {
-                    "422": {
-                        "description": "The type is wrong",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "error": {
-                                            "type": "boolean",
-                                            "example": "true"
-                                        },
-                                        "status_code": {
-                                            "type": "integer",
-                                            "example": "422"
-                                        },
-                                        "status": {
-                                            "type": "string",
-                                            "example": "Unprocessable Entity"
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "The type is wrong"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
                     "200": {
-                        "description": "Research results",
+                        "description": "Lists of tasks",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -62,7 +34,7 @@
                                         },
                                         "message": {
                                             "type": "string",
-                                            "example": "Research results"
+                                            "example": "Lists of tasks"
                                         },
                                         "data": {
                                             "properties": {
@@ -72,27 +44,327 @@
                                                 },
                                                 "query": {
                                                     "properties": {
-                                                        "price": {
+                                                        "name": {
                                                             "type": "string",
-                                                            "example": "Research results"
+                                                            "example": "Task name"
                                                         },
-                                                        "yes_out": {
+                                                        "activity": {
                                                             "type": "string",
-                                                            "example": "no"
+                                                            "example": "Task activity"
                                                         },
-                                                        "pickup-location": {
+                                                        "data": {
                                                             "type": "string",
-                                                            "example": "Research results"
+                                                            "example": "2022/03/05"
                                                         },
-                                                        "with-driver": {
+                                                        "status": {
                                                             "type": "string",
-                                                            "example": "Research results"
+                                                            "example": "failed"
                                                         }
                                                     },
                                                     "type": "object"
                                                 }
                                             },
                                             "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/todo/create": {
+            "post": {
+                "tags": [
+                    "To do List"
+                ],
+                "summary": "Create a new Task",
+                "description": "Create a new Task",
+                "operationId": "v1TodoCreate",
+                "requestBody": {
+                    "description": "Task informations",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "activity",
+                                    "date"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "task name"
+                                    },
+                                    "activity": {
+                                        "type": "string",
+                                        "example": "Description"
+                                    },
+                                    "date": {
+                                        "type": "string",
+                                        "format": "date",
+                                        "example": "Activity date"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "422": {
+                        "description": "An unknown error has occurred !!! Please try again later",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "boolean",
+                                            "example": "true"
+                                        },
+                                        "status_code": {
+                                            "type": "string",
+                                            "example": "422"
+                                        },
+                                        "status": {
+                                            "type": "string",
+                                            "example": "Unprocessable Entity"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "An unknown error has occurred !!! Please try again later"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "200": {
+                        "description": "Task added",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "boolean",
+                                            "example": "false"
+                                        },
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "status_code": {
+                                            "type": "integer",
+                                            "example": "200"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Task added."
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": "2"
+                                                },
+                                                "name": {
+                                                    "type": "string",
+                                                    "example": "Name task"
+                                                },
+                                                "activity": {
+                                                    "type": "string",
+                                                    "example": "Activity description"
+                                                },
+                                                "status": {
+                                                    "type": "string",
+                                                    "example": "completed"
+                                                },
+                                                "created_at": {
+                                                    "type": "string",
+                                                    "example": "2022/02/12"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/todo/completed": {
+            "post": {
+                "tags": [
+                    "To do List"
+                ],
+                "summary": "Completed Task",
+                "description": "Completed Task",
+                "operationId": "v1TodoCompleted",
+                "requestBody": {
+                    "description": "Task informations",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "id"
+                                ],
+                                "properties": {
+                                    "id": {
+                                        "type": "integer",
+                                        "example": "1"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "422": {
+                        "description": "An unknown error has occurred !!! Please try again later",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "boolean",
+                                            "example": "true"
+                                        },
+                                        "status_code": {
+                                            "type": "string",
+                                            "example": "422"
+                                        },
+                                        "status": {
+                                            "type": "string",
+                                            "example": "Unprocessable Entity"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "An unknown error has occurred !!! Please try again later"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "200": {
+                        "description": "Completed task",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "boolean",
+                                            "example": "false"
+                                        },
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "status_code": {
+                                            "type": "integer",
+                                            "example": "200"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Task completed."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/todo/delete": {
+            "post": {
+                "tags": [
+                    "To do List"
+                ],
+                "summary": "Completed Task",
+                "description": "Delete Task",
+                "operationId": "v1TodoDelete",
+                "requestBody": {
+                    "description": "Task informations",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "id"
+                                ],
+                                "properties": {
+                                    "id": {
+                                        "type": "integer",
+                                        "example": "1"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "422": {
+                        "description": "An unknown error has occurred !!! Please try again later",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "boolean",
+                                            "example": "true"
+                                        },
+                                        "status_code": {
+                                            "type": "string",
+                                            "example": "422"
+                                        },
+                                        "status": {
+                                            "type": "string",
+                                            "example": "Unprocessable Entity"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "An unknown error has occurred !!! Please try again later"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "200": {
+                        "description": "Completed task",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "boolean",
+                                            "example": "false"
+                                        },
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "status_code": {
+                                            "type": "integer",
+                                            "example": "200"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Task delete."
                                         }
                                     },
                                     "type": "object"
